chore: Add build dependency on linter job

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,7 @@ jobs:
             mega-linter.log
 
   build:
+    needs: linter
     runs-on: ubuntu-latest
     steps:
       - name: 🛎️ Checkout
