--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,9 +42,9 @@ jobs:
       - name: ☕ Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '22'
-      
+          distribution: "temurin"
+          java-version: "22"
+
       - name: 🐘 Setup Gradle
         uses: gradle/gradle-build-action@v3
 
